sin mucho q agregar

--- a/app/src/main/res/layout/contacto_holder.xml
+++ b/app/src/main/res/layout/contacto_holder.xml
@@ -14,7 +14,7 @@
             android:id="@+id/img"
             android:padding="5dp"/>
         <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
@@ -44,6 +44,12 @@
                 android:text="Telefono"
                 android:id="@+id/email"
                 />
+
         </android.support.v7.widget.LinearLayoutCompat>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/llamar"
+            android:background="@android:drawable/ic_menu_call"/>
     </android.support.v7.widget.LinearLayoutCompat>
 </LinearLayout>
